--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
        <h2>JavaScript</h2>
        <ul>
             <li>Enter your JavaScript notes here</li>
+            <ul>
+              <li>A variable is a named container that allows us to store data in our code.</li>
+              <li>Control flow is the order in which a computer executes code in a script.</li>
+              <li>Inspect website then click console to see bugs and javascript topics</li>
+            </ul>
        </ul>
 
       </section>
